chore(deps): upgrade projen
Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/wheatstalk/cdk-ecs-keycloak/actions/runs/1029226758

------

*Automatically created by projen via the "upgrade-projen" workflow*

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           git config user.email "github-actions@github.com"
       - name: Install dependencies
         run: yarn install --check-files --frozen-lockfile
-      - name: Release
+      - name: release
         run: npx projen release
       - name: Check for new commits
         id: git_remote
@@ -42,7 +42,7 @@ jobs:
     container:
       image: jsii/superchain
   release_npm:
-    name: Release to NPM
+    name: Release to npm
     needs: release
     runs-on: ubuntu-latest
     permissions:
@@ -56,8 +56,8 @@ jobs:
       - name: Release
         run: npx -p jsii-release@latest jsii-release-npm
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_DIST_TAG: latest
           NPM_REGISTRY: registry.npmjs.org
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     container:
       image: jsii/superchain
