--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -222,6 +222,22 @@
         }
       ]
     },
+    "publish:npm": {
+      "name": "publish:npm",
+      "description": "Publish this package to the npm Registry",
+      "env": {
+        "NPM_DIST_TAG": "latest",
+        "NPM_REGISTRY": "registry.npmjs.org"
+      },
+      "requiredEnv": [
+        "NPM_TOKEN"
+      ],
+      "steps": [
+        {
+          "exec": "npx -p jsii-release@latest jsii-release-npm"
+        }
+      ]
+    },
     "docgen": {
       "name": "docgen",
       "description": "Generate API.md from .jsii manifest",
@@ -238,6 +254,9 @@
         "RELEASE": "true"
       },
       "steps": [
+        {
+          "exec": "rm -fr dist"
+        },
         {
           "spawn": "bump"
         },
