--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "compat": "npx projen compat",
+    "publish:npm": "npx projen publish:npm",
     "docgen": "npx projen docgen",
     "release": "npx projen release",
     "projen": "npx projen",
@@ -50,7 +51,7 @@
     "jsii-pacmak": "^1.30.0",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
-    "projen": "^0.25.4",
+    "projen": "^0.27.1",
     "standard-version": "^9",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
